--- a/ios/Worktajm/Worktajm/Base.lproj/Main.storyboard
+++ b/ios/Worktajm/Worktajm/Base.lproj/Main.storyboard
@@ -16,13 +16,34 @@
                     <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="SaH-Hk-vr4">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="zOQ-hV-cbE">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zOQ-hV-cbE" id="SIS-uS-tgu">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="SaH-Hk-vr4" firstAttribute="top" secondItem="tsR-hK-woN" secondAttribute="topMargin" id="0IT-OK-QK8"/>
+                            <constraint firstItem="SaH-Hk-vr4" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" id="2pq-Sx-pNj"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="SaH-Hk-vr4" secondAttribute="trailing" id="a3b-f3-JNO"/>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="SaH-Hk-vr4" secondAttribute="bottom" id="kqz-ZO-6FP"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Report" image="first" id="acW-dT-cKf"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="271.5" y="-105"/>
+            <point key="canvasLocation" x="271" y="-105"/>
         </scene>
         <!--View Time Entries-->
         <scene sceneID="wg7-f3-ORb">
