--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -1,72 +1,109 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:gravity="center_horizontal"
-    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
-    style="@style/WorktajmLogin">
+              xmlns:tools="http://schemas.android.com/tools"
+              style="@style/WorktajmLogin"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:gravity="center_horizontal"
+              android:orientation="vertical"
+              android:paddingBottom="@dimen/activity_vertical_margin"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin"
+              android:paddingTop="@dimen/activity_vertical_margin"
+              tools:context=".LoginActivity">
 
     <!-- Login progress -->
 
-    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp" android:visibility="gone" />
+    <ProgressBar
+        android:id="@+id/login_progress"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone" />
 
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:fillViewport="true">
+
         <LinearLayout
             android:id="@+id/email_login_form_01"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical">
 
-
             <TextView
+                android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/LoginTimeReports"
-                android:id="@+id/textView2"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="40dp"
+                android:layout_marginTop="40dp"
+                android:text="@string/LoginTimeReports"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="#ffffff"
                 android:textSize="32dp"
-                android:textStyle="bold"
-                android:layout_marginTop="40dp"
-                android:layout_marginBottom="40dp" />
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:layout_width="0px"
+                android:layout_height="0px"/>
+            <!--android:nextFocusUp="@+id/email"-->
+            <!--android:nextFocusLeft="@+id/email"-->
+            <!--android:nextFocusRight="@+id/password"-->
+            <!--android:nextFocusDown="@+id/password"-->
+
+            <AutoCompleteTextView
+                android:id="@+id/email"
+                android:nextFocusForward="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/prompt_email"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="#ffffff"
+                android:textColorHighlight="#ffffff"
+                android:textColorHint="#ffffff"
+                android:textColorLink="#ffffff" />
+
+            <EditText
+                android:id="@+id/password"
+                android:nextFocusForward="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/prompt_password"
+                android:imeActionId="@+id/login"
+                android:imeActionLabel="@string/action_sign_in_short"
+                android:imeOptions="actionUnspecified"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="#ffffff"
+                android:textColorHighlight="#ffffff"
+                android:textColorHint="#ffffff"
+                android:textColorLink="#ffffff" />
 
             <Button
+                android:id="@+id/email_sign_in_button"
+                android:nextFocusForward="@+id/email"
                 style="@style/LoginButton"
-                android:id="@+id/button"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in_with_google"
-                android:textStyle="bold"
-                android:textColor="#ffffff"
                 android:background="#ff6803"
-                android:layout_gravity="center" />
-
-            <Button
-                style="@style/LoginButton"
-                android:id="@+id/button2"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in_with_facebook"
-                android:textStyle="bold"
+                android:text="@string/action_sign_in"
                 android:textColor="#ffffff"
-                android:background="#1020ff"
-                android:layout_gravity="center_horizontal" />
+                android:textStyle="bold" />
+
             <!-- stretching frame layout, using layout_weight -->
             <FrameLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_weight="1">
-            </FrameLayout>
+                android:layout_weight="1"></FrameLayout>
 
             <!-- content fixated to the bottom of the screen -->
             <LinearLayout
@@ -75,44 +112,40 @@
                 android:orientation="vertical">
                 <!-- your bottom content -->
                 <TextView
+                    android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/sign_in_with"
-                    android:id="@+id/textView3"
                     android:layout_gravity="center_horizontal"
-                    android:textColor="#ffffff"
-                    android:textStyle="bold"
                     android:layout_marginTop="20dp"
                     android:capitalize="characters"
-                    android:editable="true" />
-
-                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
-                    android:inputType="textEmailAddress" android:maxLines="1"
-                    android:singleLine="true"
+                    android:editable="true"
+                    android:text="@string/sign_in_with"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="#ffffff"
-                    android:textColorLink="#ffffff"
-                    android:textColorHint="#ffffff"
-                    android:textColorHighlight="#ffffff" />
-
-                <EditText android:id="@+id/password" android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
-                    android:imeActionId="@+id/login"
-                    android:imeActionLabel="@string/action_sign_in_short"
-                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
-                    android:maxLines="1" android:singleLine="true"
+                    android:textStyle="bold" />
+                <Button
+                    android:id="@+id/button"
+                    style="@style/LoginButton"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="16dp"
+                    android:background="#ff6803"
+                    android:text="@string/action_sign_in_with_google"
                     android:textColor="#ffffff"
-                    android:textColorHighlight="#ffffff"
-                    android:textColorHint="#ffffff"
-                    android:textColorLink="#ffffff" />
+                    android:textStyle="bold" />
 
-                <Button android:id="@+id/email_sign_in_button" style="@style/LoginButton"
-                    android:layout_width="match_parent" android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp" android:text="@string/action_sign_in"
-                    android:textStyle="bold"
+                <Button
+                    android:id="@+id/button2"
+                    style="@style/LoginButton"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="16dp"
+                    android:background="#1020ff"
+                    android:text="@string/action_sign_in_with_facebook"
                     android:textColor="#ffffff"
-                    android:background="#ff6803" />
+                    android:textStyle="bold" />
 
 
             </LinearLayout>
