--- a/android/app/src/main/res/layout/fragment_log.xml
+++ b/android/app/src/main/res/layout/fragment_log.xml
@@ -4,8 +4,8 @@
     android:transitionGroup="false">
 
     <ExpandableListView
-        android:layout_width="wrap_content"
-        android:layout_height="300dp"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:id="@+id/listViewTimeEntries"
         android:layout_gravity="center_horizontal|top"
         android:layout_below="@+id/toolbar"
