--- a/android/app/src/main/res/layout/fragment_timer.xml
+++ b/android/app/src/main/res/layout/fragment_timer.xml
@@ -4,8 +4,8 @@
     tools:context="com.arnellconsulting.worktajm.TimerFragment">
 
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:id="@+id/listViewProjects"
         android:layout_gravity="center_horizontal|top"
         android:layout_below="@+id/toolbar"
