--- a/android/app/src/main/res/layout/project_list_row.xml
+++ b/android/app/src/main/res/layout/project_list_row.xml
@@ -5,12 +5,13 @@
     android:layout_height="match_parent">
 
 
-    <ImageButton
-        style="?android:attr/buttonStyleSmall"
+    <Button
+        style="@android:style/Theme.Material"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_play_arrow_black_48dp"
+        android:drawable="@drawable/ic_play_arrow_white_48dp"
         android:text="Start"
+
         android:id="@+id/button" />
 
     <TextView
