--- a/android/app/src/main/res/layout/time_entry_group_row.xml
+++ b/android/app/src/main/res/layout/time_entry_group_row.xml
@@ -5,32 +5,29 @@
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/name"
-        android:layout_width="200dp"
+        android:layout_width="@dimen/log_project_name"
         android:layout_height="wrap_content"
         style="@style/largeTextBlack"
         android:text="2001-01-01"
         />
-    <TableLayout
-        android:layout_toRightOf="@id/name"
-        android:layout_width="fill_parent"
+    <TextView
+        android:id="@+id/totalText"
+        android:layout_alignTop="@+id/total"
+        android:layout_alignBottom="@+id/name"
+        android:layout_toEndOf="@+id/name"
         android:layout_height="wrap_content"
-        android:stretchColumns="1"
-        android:gravity="center_vertical|left">
-        <TableRow>
-            <TextView
-                android:id="@+id/timerText"
-                android:layout_height="wrap_content"
-                style="@style/aboutMediumTextBlack"
-                android:textStyle="bold"
-                android:text="Total Time:"
-                />
-            <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                style="@style/aboutMediumTextBlack"
-                android:textStyle="bold"
-                android:gravity="right"
-                android:text="04:00:00" />
-        </TableRow>
-    </TableLayout>
+        android:layout_width="wrap_content"
+        style="@style/aboutMediumTextBlack"
+        android:text="Time: "
+        android:gravity="right" />
+    <TextView
+        android:id="@+id/total"
+        android:layout_toRightOf="@+id/totalText"
+        android:layout_alignBottom="@+id/name"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        style="@style/aboutMediumTextBlack"
+        android:text="04:00:00"
+        android:gravity="right"
+        />
 </RelativeLayout>
