--- a/android/app/src/main/res/layout/project_list_row.xml
+++ b/android/app/src/main/res/layout/project_list_row.xml
@@ -2,32 +2,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="8dp">
 
-
-    <Button
-        style="@android:style/Theme.Material"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawable="@drawable/ic_play_arrow_white_48dp"
-        android:text="Start"
-
-        android:id="@+id/button" />
 
     <TextView
         android:id="@+id/name"
-        android:layout_toRightOf="@id/button"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         style="@style/largeTextBlack"
         android:text="{PROJECT NAME}"
         />
     <TableLayout
-        android:layout_toRightOf="@id/button"
         android:layout_below="@id/name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:stretchColumns="1"
+        android:layout_toLeftOf="@+id/button"
         android:gravity="center_vertical|left">
         <TableRow>
             <TextView
@@ -66,5 +57,17 @@
                 />
         </TableRow>
     </TableLayout>
+
+    <Button
+        android:id="@+id/button"
+        style="@android:style/Theme.Material"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="8dp"
+        android:drawable="@drawable/ic_play_arrow_white_48dp"
+        android:text="Start"
+        />
 
 </RelativeLayout>
